--- a/app/index.html
+++ b/app/index.html
@@ -45,32 +45,7 @@
 
   <div class="container">
     <div ng-include="'views/main.html'" ng-controller="MainCtrl"></div>
-    <div class="g-signin2" data-onsuccess="onSignIn"></div>
   </div>
-  <a href="#" onclick="signOut();">Sign out</a>
-  <script>
-    function signOut() {
-      var auth2 = gapi.auth2.getAuthInstance();
-      auth2.signOut().then(function () {
-        console.log('User signed out.');
-      });
-    }
-  </script>
-  <div class="footer">
-    <div class="container">
-      <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
-    </div>
-  </div>
-
-  <script>
-    function onSignIn(googleUser) {
-      var profile = googleUser.getBasicProfile();
-      console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
-      console.log('Name: ' + profile.getName());
-      console.log('Image URL: ' + profile.getImageUrl());
-      console.log('Email: ' + profile.getEmail());
-    }
-  </script>
 
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
   <script>
@@ -85,16 +60,18 @@
     ga('send', 'pageview');
   </script>
 
-  <script src="https://apis.google.com/js/platform.js" async defer></script>
   <!-- build:js(.) scripts/vendor.js -->
   <!-- bower:js -->
   <script src="bower_components/angular/angular.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
+<!--  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCSJDV0zNfNwEiz1k2bELKx93M35JAu49w" async defer></script>-->
+  <script src="bower_components/angular-directive.g-signin/google-plus-signin.js"></script>
 
   <!-- build:js({.tmp,app}) scripts/scripts.js -->
   <script src="scripts/app.js"></script>
   <script src="scripts/controllers/main.js"></script>
+  <script src="scripts/directives/map.directive.js"></script>
   <!-- endbuild -->
 </body>
 
