--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
   <meta name="google-signin-client_id" content="735680481775-osl4350j9njmbc6qge6gc4fmb0b2d7am.apps.googleusercontent.com">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
   <!-- build:css(.) styles/vendor.css -->
   <!-- bower:css -->
@@ -23,28 +24,9 @@
     <![endif]-->
 
   <!-- Add your site or application content here -->
-  <div class="header">
-    <div class="navbar navbar-default" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-
-          <a class="navbar-brand" href="#/">gappsTask</a>
-        </div>
-
-        <div class="collapse">
-
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#/">Home</a></li>
-            <li><a ng-href="#/">About</a></li>
-            <li><a ng-href="#/">Contact</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
 
   <div class="container">
-    <div ng-include="'views/main.html'" ng-controller="MainCtrl"></div>
+    <div ng-include="'views/main.html'" ng-controller="MainCtrl as vm"></div>
   </div>
 
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
@@ -63,10 +45,11 @@
   <!-- build:js(.) scripts/vendor.js -->
   <!-- bower:js -->
   <script src="bower_components/angular/angular.js"></script>
+  <script src="bower_components/ng-google-signin/dist/ng-google-signin.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
 <!--  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCSJDV0zNfNwEiz1k2bELKx93M35JAu49w" async defer></script>-->
-  <script src="bower_components/angular-directive.g-signin/google-plus-signin.js"></script>
+<!--  <script src="bower_components/angular-directive.g-signin/google-plus-signin.js"></script>-->
 
   <!-- build:js({.tmp,app}) scripts/scripts.js -->
   <script src="scripts/app.js"></script>
