styling, chart, animation

--- a/app/index.html
+++ b/app/index.html
@@ -8,9 +8,13 @@
   <meta name="viewport" content="width=device-width">
   <meta name="google-signin-client_id" content="735680481775-osl4350j9njmbc6qge6gc4fmb0b2d7am.apps.googleusercontent.com">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
+  <link href='https://fonts.googleapis.com/css?family=Work+Sans:400,500,700' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
   <!-- build:css(.) styles/vendor.css -->
   <!-- bower:css -->
+  <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
+  <link rel="stylesheet" href="bower_components/angular-chart.js/dist/angular-chart.css" />
   <!-- endbower -->
   <!-- endbuild -->
   <!-- build:css(.tmp) styles/main.css -->
@@ -25,9 +29,7 @@
 
   <!-- Add your site or application content here -->
 
-  <div class="container">
-    <div ng-include="'views/main.html'" ng-controller="MainCtrl as vm"></div>
-  </div>
+  <div ui-view layout="column" style="min-height: 100%"></div>
 
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
   <script>
@@ -46,14 +48,24 @@
   <!-- bower:js -->
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/ng-google-signin/dist/ng-google-signin.js"></script>
+  <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+  <script src="bower_components/angular-animate/angular-animate.js"></script>
+  <script src="bower_components/angular-aria/angular-aria.js"></script>
+  <script src="bower_components/angular-messages/angular-messages.js"></script>
+  <script src="bower_components/angular-material/angular-material.js"></script>
+  <script src="bower_components/Chart.js/Chart.js"></script>
+  <script src="bower_components/angular-chart.js/dist/angular-chart.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
-<!--  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCSJDV0zNfNwEiz1k2bELKx93M35JAu49w" async defer></script>-->
-<!--  <script src="bower_components/angular-directive.g-signin/google-plus-signin.js"></script>-->
+  <!--  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCSJDV0zNfNwEiz1k2bELKx93M35JAu49w" async defer></script>-->
+  <!--  <script src="bower_components/angular-directive.g-signin/google-plus-signin.js"></script>-->
 
   <!-- build:js({.tmp,app}) scripts/scripts.js -->
   <script src="scripts/app.js"></script>
+  <script src="scripts/directives/percentChart.js"></script>
+  <script src="scripts/controllers/nav.js"></script>
   <script src="scripts/controllers/main.js"></script>
+  <script src="scripts/controllers/login.js"></script>
   <script src="scripts/directives/map.directive.js"></script>
   <!-- endbuild -->
 </body>
