better way to get userinfo, refactor scss

--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title></title>
   <meta name="description" content="">
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="google-signin-client_id" content="735680481775-osl4350j9njmbc6qge6gc4fmb0b2d7am.apps.googleusercontent.com">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Work+Sans:400,500,700' rel='stylesheet' type='text/css'>
